JSAPI 4.7 and 3D elements from https://github.com/jkieboom/devsummit-palm-springs-2018/tree/master/demos/tectonic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,20 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "types": ["arcgis-js-api"],
     "jsx": "react",
     "jsxFactory": "tsx",
     "preserveConstEnums": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "lib": [
+      "dom",
+      "es2015.promise",
+      "scripthost",
+      "es5"
+    ]
   },
   "include": [
-    "./app/*"
+    "app/*",
+    "typings/**/*"
   ],
   "exclude" : ["node_modules"]
 }
